--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "humps": "^1.1.0",
     "oauth-1.0a": "^1.0.1",
     "request": "^2.72.0",
-    "winston": "^2.2.0"
+    "winston": "~3.1.0"
   },
   "deprecated": false,
   "description": "REST client for accessing Magento 2 functionality.",
